--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
+config/confug.env
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
